testsuite/tests/module/mod66.stderr
mod66.hs:5:1: error: [GHC-29916] Multiple declarations of ‘f’
    At: mod66.hs:5:1
        mod66.hs:3:1

