testsuite/tests/module/mod66.hs
-- !!! Multiple value bindings
module M where
f x = 'a'
g x = 'b'
f x = 'c'